# Api/src/routes/specifications.routes.ts
@@ -1,20 +1,16 @@
 import { Router } from "express";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ListSpecificationsController } from "../modules/cars/useCases/listSpecifications/ListSpecificationsController";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
-import { listSpecificationsController } from "../modules/cars/useCases/listSpecifications";
 
 
 const specificationsRoutes = Router();
 
+const createSpecificationController = new CreateSpecificationController();
+const listSpecificationsController = new ListSpecificationsController();
 
-specificationsRoutes.post("/", (request, response) => {
-  return createSpecificationController.handle(request, response);
-})
+specificationsRoutes.post("/", createSpecificationController.handle)
 
-
-specificationsRoutes.get("/", (request, response) => {
-  return listSpecificationsController.handle(request, response);
-})
-
+specificationsRoutes.get("/", listSpecificationsController.handle)
 
 export { specificationsRoutes };
